--- a/assets/less/_contact.less
+++ b/assets/less/_contact.less
@@ -29,5 +29,15 @@
     &#phone-container, &#email-container {
       list-style-type: none;
     }
+
+    a {
+      &:link, &:visited, &:active {
+        color: @yellow;
+      }
+
+      &:hover {
+        color: @white;
+      }
+    }
   }
 }
