--- a/assets/less/_contact.less
+++ b/assets/less/_contact.less
@@ -3,7 +3,8 @@
 #contact-container {
   grid-area: ct;
 
-  border-top: solid 2px @yellow;
+  margin-top: 2px;
+
   background-color: @grey;
   color: @yellow;
 
@@ -24,10 +25,6 @@
 
     &#email-container {
       grid-area: email;
-    }
-
-    &#phone-container, &#email-container {
-      list-style-type: none;
     }
 
     a {
