--- a/assets/less/_common.less
+++ b/assets/less/_common.less
@@ -32,5 +32,11 @@
       border-bottom-left-radius: @border-radius;
       border-bottom-right-radius: @border-radius;
     }
+
+    &:not(:first-child) {
+      h3 {
+        text-transform: uppercase;
+      }
+    }
   }
 }
