--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -33,6 +33,10 @@ html {
         margin: 0;
         padding: 0;
       }
+
+      .lowercase {
+        text-transform: lowercase !important;
+      }
     }
   }
 }
