--- a/assets/less/_identity.less
+++ b/assets/less/_identity.less
@@ -6,10 +6,10 @@
   background-color: @grey;
 
   h1 {
-    font-size: 4rem;
+    font-size: 6rem;
 
     span:first-of-type {
-      color: @white;
+      color: @lightgrey;
     }
 
     span:last-of-type {
